# rdp-channel-client

./: Cargo.toml  README.md
src/: cli.rs  gui.rs  main.rs
src/rdp/: keyboard.rs  mod.rs  network_client.rs  vc.rs
